--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-compass": "^1.1.1",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-uglify": "^3.0.1"
   }
 }
