Code refacto and callback adjustment/bug fix

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "jQuery Schedule",
   "name": "jquery-schedule",
-  "version": "1.2.1",
+  "version": "2.0.0",
   "description": "A jQuery plugin for schedule management.",
   "keywords": [
     "schedule",
@@ -31,7 +31,8 @@
     "grunt-contrib-compass": "^1.1.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-uglify": "^3.0.1"
+    "grunt-contrib-uglify": "^3.0.1",
+    "grunt-contrib-watch": "^1.0.0"
   },
   "dependencies": {
     "jquery": "^3.2.1",
