--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-uglify": "^3.0.1",
-    "grunt-contrib-watch": "^1.0.0"
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-remove-logging": "^0.2.0"
   },
   "dependencies": {
     "jquery": "^3.2.1",
