--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "title": "jQuery Schedule",
   "name": "jquery-schedule",
   "version": "2.0.0",
-  "description": "A schedule management with jQuery.",
+  "description": "A simple scheduler with jQuery.",
   "keywords": [
     "schedule",
+    "scheduler",
     "calendar",
     "management",
     "jquery",
-    "jquery-ui",
-    "jquery-plugin"
+    "plugin"
   ],
   "author": {
     "name": "Thomas BORUSZEWSKI",
