--- a/.jshintrc
+++ b/.jshintrc
@@ -7,7 +7,7 @@
   "latedef": true,
   "maxlen": 140,
   "newcap": true,
-  "quotmark": "double",
+  "quotmark": "single",
   "strict": true,
   "undef": true,
   "unused": true,
