--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "title": "jQuery Schedule",
   "name": "jquery-schedule",
   "version": "2.1.0",
-  "description": "A simple scheduler with jQuery.",
+  "description": "A schedule management with jQuery.",
   "keywords": [
     "schedule",
     "scheduler",
-    "calendar",
     "management",
+    "calendar",
     "jquery",
     "plugin"
   ],
